[package]
name = "dioneo_ui"
version = "0.1.0"
edition = "2024"
description = "Neuromorphic UI component library for Dioxus"
repository = "https://github.com/fontlos/DioNeoUI"
license = "MIT"
keywords = ["dioxus", "ui", "components", "neuromorphic"]
categories = ["gui", "rendering"]

[dependencies]
dioxus = "0.7.3"
